changes in documentation and vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SGSeq@128354 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+CHANGES IN VERSION 1.10.0
+------------------------
+
+    o Bug fixes and documentation improvements
+
+
 CHANGES IN VERSION 1.8.0
 ------------------------
 
