--- a/vignettes/SGSeq.bib
+++ b/vignettes/SGSeq.bib
@@ -1,6 +1,6 @@
 @article{Heber:2002aa,
 author = {Heber, Steffen and Alekseyev, Max and Sze, Sing-Hoi and Tang, Haixu and Pevzner, Pavel A},
-title = {{Splicing graphs and EST assembly problem.}},
+title = {{Splicing graphs and EST assembly problem}},
 journal = {Bioinformatics (Oxford, England)},
 year = {2002},
 volume = {18 Suppl 1},
@@ -9,7 +9,7 @@ pages = {S181--8}
 
 @article{Seshagiri:2012gr,
 author = {Seshagiri, Somasekar and Stawiski, Eric W and Durinck, Steffen and Modrusan, Zora and Storm, Elaine E and Conboy, Caitlin B and Chaudhuri, Subhra and Guan, Yinghui and Janakiraman, Vasantharajan and Jaiswal, Bijay S and Guillory, Joseph and Ha, Connie and Dijkgraaf, Gerrit J P and Stinson, Jeremy and Gnad, Florian and Huntley, Melanie A and Degenhardt, Jeremiah D and Haverty, Peter M and Bourgon, Richard and Wang, Weiru and Koeppen, Hartmut and Gentleman, Robert and Starr, Timothy K and Zhang, Zemin and Largaespada, David A and Wu, Thomas D and de Sauvage, Frederic J},
-title = {{Recurrent R-spondin fusions in colon cancer.}},
+title = {{Recurrent R-spondin fusions in colon cancer}},
 journal = {Nature},
 year = {2012},
 volume = {488},
@@ -29,6 +29,28 @@ pages = {e1003118},
 month = aug
 }
 
+@article{Venables:2008aa,
+author = {Venables, Julian P and Klinck, Roscoe and Bramard, Anne and Inkel, Lyna and Dufresne-Martin, Genevieve and Koh, ChuShin and Gervais-Bird, Julien and Lapointe, Elvy and Froehlich, Ulrike and Durand, Mathieu and Gendron, Daniel and Brosseau, Jean-Philippe and Thibault, Philippe and Lucier, Jean-Francois and Tremblay, Karine and Prinos, Panagiotis and Wellinger, Raymund J and Chabot, Benoit and Rancourt, Claudine and Elela, Sherif A},
+title = {{Identification of alternative splicing markers for breast cancer}},
+journal = {Cancer Research},
+year = {2008},
+volume = {68},
+number = {22},
+pages = {9525--9531},
+month = nov
+}
+
+@article{Katz:2010aa,
+author = {Katz, Yarden and Wang, Eric T and Airoldi, Edoardo M and Burge, Christopher B},
+title = {{Analysis and design of RNA sequencing experiments for identifying isoform regulation}},
+journal = {Nature Methods},
+year = {2010},
+volume = {7},
+number = {12},
+pages = {1009--1015},
+month = dec
+}
+
 @article{Anders:2012es,
 author = {Anders, S and Reyes, A and Huber, W},
 title = {{Detecting differential usage of exons from RNA-seq data}},
@@ -42,7 +64,7 @@ month = oct
 
 @article{Ritchie:2015fa,
 author = {Ritchie, Matthew E and Phipson, Belinda and Wu, Di and Hu, Yifang and Law, Charity W and Shi, Wei and Smyth, Gordon K},
-title = {{limma powers differential expression analyses for RNA-sequencing and microarray studies.}},
+title = {{limma powers differential expression analyses for RNA-sequencing and microarray studies}},
 journal = {Nucleic Acids Research},
 year = {2015},
 volume = {43},
@@ -53,7 +75,7 @@ month = apr
 
 @article{Dobin:2013fg,
 author = {Dobin, Alexander and Davis, Carrie A and Schlesinger, Felix and Drenkow, Jorg and Zaleski, Chris and Jha, Sonali and Batut, Philippe and Chaisson, Mark and Gingeras, Thomas R},
-title = {{STAR: ultrafast universal RNA-seq aligner.}},
+title = {{STAR: ultrafast universal RNA-seq aligner}},
 journal = {Bioinformatics},
 year = {2013},
 volume = {29},
@@ -64,7 +86,7 @@ month = jan
 
 @article{Kim:2015be,
 author = {Kim, Daehwan and Langmead, Ben and Salzberg, Steven L},
-title = {{HISAT: a fast spliced aligner with low memory requirements.}},
+title = {{HISAT: a fast spliced aligner with low memory requirements}},
 journal = {Nature Methods},
 year = {2015},
 volume = {12},
@@ -75,7 +97,7 @@ month = apr
 
 @article{Wu:2010ep,
 author = {Wu, Thomas D and Nacu, Serban},
-title = {{Fast and SNP-tolerant detection of complex variants and splicing in short reads.}},
+title = {{Fast and SNP-tolerant detection of complex variants and splicing in short reads}},
 journal = {Bioinformatics},
 year = {2010},
 volume = {26},
@@ -86,7 +108,7 @@ month = apr
 
 @article{Goldstein:2016hc,
 author = {Goldstein, Leonard D and Cao, Yi and Pau, Gregoire and Lawrence, Michael and Wu, Thomas D and Seshagiri, Somasekar and Gentleman, Robert},
-title = {{Prediction and Quantification of Splice Events from RNA-Seq Data.}},
+title = {{Prediction and Quantification of Splice Events from RNA-Seq Data}},
 journal = {PLoS ONE},
 year = {2016},
 volume = {11},
